# writing-functions-blogpost-2024

./: .gitignore  BLOGPOST.md  README.md  workflow.json
javascript/: README.md  index.js  package-lock.json  package.json
javascript/src/: subtract.js  subtract.ts
js/: index.js  package.json
js/wit/: world.wit
python/: README.md  app.py  requirements.txt
python/wit/: world.wit
rust/: Cargo.toml  README.md
rust/src/: bindings.rs  lib.rs
rust/wit/: world.wit
wit/: math.wit  mulitplication.wit  multiplication.wit  subtraction.wit
workflows/: add.json  add_and_subtract.json  all.json  division_by_zero.json
