[package]
name = "add"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = [
  "realloc",
] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:add"

[package.metadata.component.dependencies]

[package.metadata.component.target]

[package.metadata.component.target.dependencies]
"wasi:logging" = { path = "../wit/deps/logging" }
